syntax = "proto3";
package saonetwork.sao.did;

option go_package = "github.com/SaoNetwork/sao/x/did/types";

message Did {
  string accountId = 1; 
  string did = 2; 
  
}

